css/browser.css
body {
	background-color: #05152f;
    position: relative;
    width: -webkit-calc(100% - 30px);
    margin-left: auto;
    margin-right: auto;
    overflow-y: hidden;
}

img{
    -webkit-user-drag: none;
}

.browserTitle{
    color: white;
    opacity: 0.8;
    position: absolute;
    top: -10px;
    left: 10px;
    z-index: 2;
}

.refresh {
    opacity: 0.8;
    position: absolute;
    top: 8px;
    left: 210px;
    color: white;
    font-weight: 700;
    background-color: black;
    width: 115px;
    height: 30px;
    border-style: solid;
    border: 1px solid white;
	z-index:1000;
}

.refresh:hover{
    background-color: #31415b;
}

.serverStats {
    color: white;
	font-weight: bold;
    opacity: 0.8;
    position: absolute;
    top: 3px;
    left: 350px;
    z-index: 2;
}

.closeButton {
    opacity: 0.8;
    position: absolute;
    top: 8px;
    right: 2px;
    color: white;
    font-weight: bold;
    background-color: black;
    width: 95px;
    height: 30px;
    border-style: solid;
    border: 1px solid white;
    display: none;
}

.closeButton:hover{
    background-color: #1a3d5a;
}

.browserSwitch{
    opacity: 0.8;
    background-color: #13233d;
    color: white;
    border: 1px solid #404f70;
    border-left: 0;
    border-bottom: 0;
    padding: 5px;
    padding-left: 40px;
    padding-right: 10px;
    position: absolute;
    top: 14px;
    left: 588px;
    z-index: 0;
}

.browserSwitch:hover{
    background-color: #31415b;
}

/*==============================*/
/*===== Controller buttons =====*/
/*==============================*/

.controllerButton{
    opacity: 0;
    margin-top: -3;
    margin-left: 5;
    height: 28;
    width: 28;
    display: none;
}

.selected .controllerButton{
    opacity: 1;
}

.refresh .controllerButton{
    opacity: 1;
}

.closeButton .controllerButton{
    opacity: 1;
}

/*==============================*/
/*======= Game Info Card =======*/
/*==============================*/

#gamecard{
    width: 250px;
    position: fixed;
    top: 2px;
    right: 16px;
    float: right;
    z-index: 2;
    margin-top: 54px;
    margin-right: 10px;
}

#cardheader{
    position: relative;
    top: 2px;
    left: 2px;
    width: 246px;
    min-height: 139px;
    background-color: #13233d;
    -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
}

#cardheaderborder{
    background-color: #404f70;
    width: 250px;
    min-height: 143px;
    -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
    padding-bottom: 4px;
}

#title{
    position: relative;
    margin-top: 2px;
    min-height: 30px;
    text-align: center;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 4px;
    padding-bottom: 4px;
    line-height: 20px;
    width: 246px;
    background-color: black;
    color: white;
    border-bottom: 2px solid #404f70;
}

#mappic{
    width: 246px;
    height: 109px;
}

#varpic{
    margin-top: -95px;
    margin-left: 10px;
    height: 80px;
}

#scoreboard{
    margin-top: 5px;
    width: 250px;
    line-height: 30px;
    text-align: center;
    border: 2px solid #404f70;
    background-color: #13233d;
    color: white; 
}

.statBreakdown{
    font-size: 10pt;
    line-height: 20px;
    color: white;
    width: 245px;
    border-collapse: collapse;
}

.statBreakdown td{
    border: 1px solid black;
    padding-left: 2px;
}

.tableHeader {
    background-color: black;
    color: white;
}

.tableHeader th{
    padding-left: 2px;
}

#gameinfoborder{
    margin-top: -2px;
    background-color: #404f70;
    width: 251px;
    padding-bottom: 4px;
    -webkit-clip-path: polygon(0 0, 100% 0, 100% -webkit-calc(100% - 30px), -webkit-calc(100% - 30px) 100%, 0 100%, 0 0);
}

#gameinfo{
    position: relative;
    top: 2px;
    left: 2px;
    width: 247px;
    margin-top: 6px;
    padding-left: 4px;
    line-height: 20px;
    text-align: left;
    background-color: #13233d;
    color: white; 
    -webkit-clip-path: polygon(0 0, 100% 0, 100% -webkit-calc(100% - 30px), -webkit-calc(100% - 30px) 100%, 0 100%, 0 0);
}

/*=============================*/
/*======= Outter border =======*/
/*=============================*/

#extBorder{
    position: absolute;
    top: 0px;
    background-color: #404f70;
    height:100vh;
    width: 100%;
    padding: 1px;
    -webkit-clip-path: polygon(575px 0%, 625px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
    z-index: 1;
}

#extBorder2{
    background-color: #05152f;
    top: 1px;
    left: 1px;
    height:100vh;
    padding: 5px;
    -webkit-clip-path: polygon(573px 0%, 623px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
    z-index: 1;
}


/*===============================*/
/*==== DataTable Fixes/Hacks ====*/
/*===============================*/

#serverTable{
    position: relative;
    top: -30px;
}

#serverTable_wrapper{
    opacity: 0.8;
    float: left;
    top: 55;
    min-height: -webkit-calc(100% - 55px);
    width: -webkit-calc(100% - 260px);
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 45px;
    z-index: 2;
    -webkit-clip-path: polygon(100% 0, 100% 100%, 42px 100%, 0 -webkit-calc(100% - 47px), 0 0);
}

#serverTable tbody tr td{
    background-color: #13233d;
    color: white;
    border: 1px solid #05152f;
}

#serverTable tbody tr{
    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% -webkit-calc(100% - 12px), -webkit-calc(100% - 12px) 100%, 0% 100%);
}

.selected td{
    background-color: #31415b;
    color: white;
}

.sorting_asc, .sorting_desc {
    background-color: white;
    color: #13233d;
}

.sorting{
    padding-top: 0;
    color: white !important;
}

.dataTable thead th, .dataTable thead td {
    border-bottom: 1px solid white !important;
}

.dataTables_scroll{
    position: relative;
    top: -34px;
}

.dataTables_scrollBody{
    padding-top: 29px;
    margin-bottom: -38px;
}

#serverTable tbody tr:hover td{
    background-color: #31415b;
	color: white;
    cursor: pointer;
}

#serverTable_filter{
    position: relative;
    top: -45px;
    right: -264px;
    z-index: 3;
}

#serverTable_filter label{
    color: white;
}

#serverTable_filter input{
    color: black;
}

#serverTable_length{
    position: absolute;
    float: left;
    bottom: 10px;
    left: 40px;
    color: black;
    z-index: 3;
}

#serverTable_length label{
    color: white;
    font-weight: normal;
}

#serverTable_length label select{
    color: black;
}

#serverTable_info{
    text-align: center;
    position: absolute;
    bottom: 0px;
    left: 0px;
    color: white;
    border-top: 1px solid #404f70;
    border-right: 1px solid #404f70;
    height: 46px;
    width: -webkit-calc(100% - 10px);
    margin-bottom: 0;
    background-color: #05152f;
}

